fix(virtual-scroll): add overflow hidden to virtual-top-height to avoid pre-rendering element height greater than virtual-top-height and cause the pre-rendering content cover the viewport content #WIK-19902 (#338)

--- a/packages/src/styles/index.scss
+++ b/packages/src/styles/index.scss
@@ -4,6 +4,9 @@
     outline: none;
     padding: 0 32px;
     white-space: break-spaces;
+    .virtual-top-height {
+        overflow: hidden;
+    }
     & [contenteditable='true'] {
         outline: none;
     }
